Changed  to accept a class instead of a function Allows for cleaner extension code
Change-Id: I16a9aaec1ccb8814667638715bb1271adc268c47
Reviewed-on: https://gerrit.spotify.net/gerrit/100082
TC-Compile-And-Test: Team City <teamcity@spotify.com>
Reviewed-by: Elias Freider <freider@spotify.com>

--- a/docs/Tutorial.ipynb
+++ b/docs/Tutorial.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "Tutorial"
+  "name": ""
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -55,7 +55,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -81,7 +81,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -108,7 +108,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -135,7 +135,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -154,14 +154,15 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 45,
+       "prompt_number": 6,
        "text": [
         "MyRecord(foo=None, bar=10)"
        ]
       }
      ],
-     "prompt_number": 45
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -179,7 +180,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 46
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -198,7 +199,7 @@
        ]
       }
      ],
-     "prompt_number": 49
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -214,16 +215,16 @@
        "evalue": "5 is not a valid UTF-8 string",
        "output_type": "pyerr",
        "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mParseError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-51-92114c8b8749>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbroken_record\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# raises an Exception because 5 isn't a text format\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;32m/Users/freider/Code/spotify/pyschema/pyschema/core.pyc\u001b[0m in \u001b[0;36mdumps\u001b[0;34m(obj)\u001b[0m\n\u001b[1;32m    301\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    302\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 303\u001b[0;31m     \u001b[0mjson_dct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_to_json_compatible\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    304\u001b[0m     \u001b[0mjson_dct\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"$record_name\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_record_name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    305\u001b[0m     \u001b[0mjson_string\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_dct\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/freider/Code/spotify/pyschema/pyschema/core.pyc\u001b[0m in \u001b[0;36m_to_json_compatible\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    260\u001b[0m             \u001b[0mval\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 262\u001b[0;31m                 \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    263\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    264\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/freider/Code/spotify/pyschema/pyschema/types.pyc\u001b[0m in \u001b[0;36mdump\u001b[0;34m(self, obj)\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m                 raise ParseError(\n\u001b[0;32m---> 33\u001b[0;31m                     \u001b[0;34m\"%r is not a valid UTF-8 string\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m                 )\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mParseError\u001b[0m                                Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-9-92114c8b8749>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbroken_record\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# raises an Exception because 5 isn't a text format\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m/Users/freider/code/spotify/pyschema/pyschema/core.pyc\u001b[0m in \u001b[0;36mdumps\u001b[0;34m(obj, attach_record_name)\u001b[0m\n\u001b[1;32m    362\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    363\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattach_record_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 364\u001b[0;31m     \u001b[0mjson_dct\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mto_json_compatible\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    365\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mattach_record_name\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    366\u001b[0m         \u001b[0mjson_dct\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"$record_name\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_record_name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/freider/code/spotify/pyschema/pyschema/core.pyc\u001b[0m in \u001b[0;36mto_json_compatible\u001b[0;34m(record)\u001b[0m\n\u001b[1;32m    274\u001b[0m         \u001b[0mval\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    275\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 276\u001b[0;31m             \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    277\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/freider/code/spotify/pyschema/pyschema/types.pyc\u001b[0m in \u001b[0;36mdump\u001b[0;34m(self, obj)\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m                 raise ParseError(\n\u001b[0;32m---> 34\u001b[0;31m                     \u001b[0;34m\"%r is not a valid UTF-8 string\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m                 )\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
         "\u001b[0;31mParseError\u001b[0m: 5 is not a valid UTF-8 string"
        ]
       }
      ],
-     "prompt_number": 51
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -255,7 +256,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 40
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -267,7 +268,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 41
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -289,7 +290,7 @@
        ]
       }
      ],
-     "prompt_number": 44
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -302,18 +303,19 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "@Text.mixin\n",
-      "def postgres_type(self):\n",
-      "    return \"TEXT\"\n",
-      "    \n",
-      "@Integer.mixin\n",
-      "def postgres_type(self):\n",
-      "    return \"INT\""
+      "Text.postgres_type = \"TEXT\"\n",
+      "Integer.postgres_type = \"INTEGER\"\n",
+      "\n",
+      "@List.mixin\n",
+      "class ListPostgresMixin:\n",
+      "    @property\n",
+      "    def postgres_type(self):\n",
+      "        return self.field_type.postgres_type + \" ARRAY\""
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -322,38 +324,43 @@
       "def create_table_from_record(record_class):\n",
       "    parts = []\n",
       "    for name, field_type in record_class._schema:\n",
-      "        parts.append(\"%s %s\" % (name, field_type.postgres_type()))\n",
+      "        parts.append(\"%s %s\" % (name, field_type.postgres_type))\n",
       "    return \"CREATE TABLE %s (\" % (record_class._record_name,) + \", \".join(parts) + \")\""
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "create_table_from_record(MyRecord)"
+      "class MyTable(Record):\n",
+      "    list_name = Text()\n",
+      "    numbers = List(Integer())\n",
+      "\n",
+      "create_table_from_record(MyTable)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 26,
+       "prompt_number": 19,
        "text": [
-        "'CREATE TABLE MyRecord (foo TEXT, bar INT)'"
+        "'CREATE TABLE MyTable (list_name TEXT, numbers INTEGER ARRAY)'"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This will trigger an error since we haven't mixed in the `postgres_schema` method for the `List` field type"
+      "The following will trigger an error since we haven't mixed in the `postgres_type` field for the `Map` field type in this example."
      ]
     },
     {
@@ -361,35 +368,26 @@
      "collapsed": false,
      "input": [
       "class Impossibru(Record):\n",
-      "    ints = List(Integer())"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 28
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "postgres_schema(Impossibru)"
+      "    numbers = Map(Integer())\n",
+      "    \n",
+      "create_table_from_record(Impossibru)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "ename": "AttributeError",
-       "evalue": "'List' object has no attribute 'postgres_type'",
+       "evalue": "'Map' object has no attribute 'postgres_type'",
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-29-a2d0ef27e508>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpostgres_schema\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mImpossibru\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;32m<ipython-input-6-4c82134d412a>\u001b[0m in \u001b[0;36mpostgres_schema\u001b[0;34m(record_class)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfield_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrecord_class\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_schema\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0mparts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfield_type\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpostgres_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m\", \"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mAttributeError\u001b[0m: 'List' object has no attribute 'postgres_type'"
+        "\u001b[0;32m<ipython-input-30-65f7b1968e1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mnumbers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mcreate_table_from_record\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mImpossibru\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-18-acb8c608618c>\u001b[0m in \u001b[0;36mcreate_table_from_record\u001b[0;34m(record_class)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfield_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrecord_class\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_schema\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0mparts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfield_type\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpostgres_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m\"CREATE TABLE %s (\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrecord_class\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_record_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\", \"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\")\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mAttributeError\u001b[0m: 'Map' object has no attribute 'postgres_type'"
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
