--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:68b4369d2a979d455c26390d1e10ea2f303bc239ca35bf8b4b21c6aebd2d9cea"
+  "signature": "sha256:2dfe493d4f63265794508d0e231320b881efad2092d4ef460ad1aa329c6a7f9c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,15 +22,23 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "API Reference"
+     ]
+    },
+    {
      "cell_type": "raw",
      "metadata": {},
      "source": [
       "\n",
-      "API Reference\n",
-      "-------------\n",
+      ".. toctree::\n",
+      "   _api/pyschema\n",
       "\n",
       ".. toctree::\n",
-      "   _api/pyschema"
+      "   _api_extensions/pyschema_extensions\n"
      ]
     },
     {
@@ -58,7 +66,7 @@
      "metadata": {},
      "source": [
       "####Declaration\n",
-      "To define a schema, use a Python class declaration inheriting from `pyschema.Record`."
+      "To define a schema, use a Python class declaration inheriting from `pyschema.Record`.\n"
      ]
     },
     {
